<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="192sp" />

    <EditText
        android:id="@+id/editText_login_email"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="@string/login_email_hint"
        android:ems="10"
        android:hint="@string/login_email_accessibility"
        android:imeActionLabel="@string/login_email_accessibility"
        android:inputType="textEmailAddress"
        android:maxWidth="320dp"
        android:textColor="@color/login_email_text"
        android:textColorHint="@color/login_email_hint" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="36sp" />

    <EditText
        android:id="@+id/editText_login_password"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="@string/login_password_hint"
        android:ems="10"
        android:hint="@string/login_password_accessibility"
        android:inputType="textPassword"
        android:maxWidth="320dp"
        android:textColor="@color/login_password_text"
        android:textColorHint="@color/login_password_hint" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:id="@+id/textView_login_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36sp"
        android:maxLines="999"
        android:ellipsize="none"
        android:textAlignment="center"
        android:textColor="@color/login_error_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/button_login"
        android:maxWidth="350dp"
        android:text="@string/button_login_text"
        android:textColor="@color/button_login_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="36sp" />

    <TextView
        android:id="@+id/textView_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/password_reset_text"
        android:textAlignment="center"
        android:textColor="@color/signup_text"
        tools:ignore="TouchTargetSizeCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="36sp" />

    <TextView
        android:id="@+id/textView_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/signup_text"
        android:textAlignment="center"
        android:textColor="@color/signup_text"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>