<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="276sp" />

    <EditText
        android:id="@+id/editText_password_reset_email"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="@string/password_reset_email_hint"
        android:ems="10"
        android:hint="@string/password_reset_email_accessibility"
        android:imeActionLabel="@string/password_reset_email_accessibility"
        android:inputType="textEmailAddress"
        android:maxWidth="320dp"
        android:textColor="@color/dark_text"
        android:textColorHint="@color/hint_text"
        tools:ignore="TextFields" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:id="@+id/textView_password_reset_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36sp"
        android:maxLines="999"
        android:ellipsize="none"
        android:textAlignment="center"
        android:textColor="@color/error_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <Button
        android:id="@+id/button_password_reset_request_password_reset"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/button_background"
        android:maxWidth="350dp"
        android:text="@string/button_password_reset_request_password_reset_text"
        android:textColor="@color/button_text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="36sp" />

    <TextView
        android:id="@+id/textView_password_reset_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/password_reset_login_text"
        android:textAlignment="center"
        android:textColor="@color/theme_text"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>